# fastapi-skeleton

./: .pre-commit-config.yaml  README.md  logging-console.yaml  pyproject.toml  setup.cfg
.github/workflows/: checks.yml  contexts-example.yml  hello-world-example.yml  job-matrix.yml
app/: config.py  main.py
app/api/: router.py
app/api/endpoints/: health_check.py
app/tests/: test_health_check.py
