[tool.poetry]
name = "fastapi-skeleton"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
requests = "^2.27.1"
uvicorn = "^0.17.4"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
mypy = "^0.931"
pre-commit = "^2.17.0"
pytest = "^7.0.0"
flake8 = "^4.0.1"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.9
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pytest.ini_options]
norecursedirs = [".git"]
filterwarnings = ["ignore::DeprecationWarning"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
